# ChangeLog for dev-dotnet/ikvm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ikvm/ChangeLog,v 1.20 2008/03/12 13:52:07 phreak Exp $

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Peter Johanson (latexer, #206688) from metadata.xml.

  02 Jan 2008; Jurek Bartuszek <jurek@gentoo.org> -files/key.snk,
  ikvm-0.36.0.5.ebuild:
  Fixed sandbox violation errors (bug #204107)

*ikvm-0.36.0.5 (31 Dec 2007)

  31 Dec 2007; Jurek Bartuszek <jurek@gentoo.org>
  +files/ikvm-0.36.0.5.pc.in, +files/key.snk, +ikvm-0.36.0.5.ebuild:
  Version bump

  28 Jul 2007; Jurek Bartuszek <jurek@gentoo.org> ikvm-0.34.0.2.ebuild:
  Removed windows-only libraries (fixing bug #186837)

  01 Jul 2007; Jurek Bartuszek <jurek@gentoo.org> ikvm-0.34.0.2.ebuild:
  Increased amount of startup memory

  29 Jun 2007; Jurek Bartuszek <jurek@gentoo.org> ikvm-0.34.0.2.ebuild:
  Switching from ecj to javac (bug #183526)

*ikvm-0.34.0.2 (26 Jun 2007)

  26 Jun 2007; Jurek Bartuszek <jurek@gentoo.org> ikvm-0.14.0.1.ebuild,
  ikvm-0.14.0.1-r1.ebuild, ikvm-0.14.0.1-r2.ebuild, ikvm-0.20.0.0.ebuild,
  +ikvm-0.34.0.2.ebuild:
  Version bump

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Feb 2007; Jurek Bartuszek <jurek@gentoo.org> ikvm-0.14.0.1.ebuild,
  ikvm-0.14.0.1-r1.ebuild, ikvm-0.14.0.1-r2.ebuild, ikvm-0.20.0.0.ebuild:
  Replaced ftp://ftp.gnu.org/gnu with mirror://gnu fixing bug #163185.

  19 Mar 2006; Mark Loeser <halcy0n@gentoo.org> ikvm-0.14.0.1.ebuild,
  ikvm-0.14.0.1-r1.ebuild, ikvm-0.14.0.1-r2.ebuild, ikvm-0.20.0.0.ebuild:
  Add DEPEND on app-arch/unzip

*ikvm-0.20.0.0 (03 Nov 2005)
*ikvm-0.14.0.1-r2 (03 Nov 2005)

  03 Nov 2005; Peter Johanson <latexer@gentoo.org> files/ikvm.pc.in,
  +ikvm-0.14.0.1-r2.ebuild, +ikvm-0.20.0.0.ebuild:
  New release, and revision bump the previous one to push out pkgconfig file
  changes to try to be multilib proper.
