@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ikvm/Attic/ikvm-0.14.0.1.ebuild,v 1.5 2007/06/26 23:53:10 jurek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/ikvm/Attic/ikvm-0.14.0.1.ebuild,v 1.6 2008/05/30 23:03:46 jurek Exp $
 
 inherit mono multilib
 
@@ -22,7 +22,8 @@ DEPEND="${RDEPEND}
 		!dev-dotnet/ikvm-bin
 		>=dev-java/jikes-1.21
 		>=dev-dotnet/nant-0.85_rc2
-		app-arch/unzip"
+		app-arch/unzip
+		dev-util/pkgconfig"
 
 src_compile() {
 	nant || die "ikvm build failed"
@@ -34,11 +35,11 @@ src_install() {
 	do
 		sed -e "s:EXE:${exe}:" \
 			-e "s:P:${P}:" \
-			${FILESDIR}/script-template \
-			> ${D}/usr/bin/${exe}
+			"${FILESDIR}"/script-template \
+			> "${D}"/usr/bin/${exe}
 		fperms +x /usr/bin/${exe}
 	done
 
 	insinto /usr/$(get_libdir)/${P}
-	doins ${S}/bin/*
+	doins "${S}"/bin/*
 }
